[package]
name = "cheap"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2021"
description = "A channel backed by a binary heap"
license = "MIT"
keywords = ["channel", "heap", "data-structure", "priority", "queue"]
categories = ["concurrency", "data-structures"]

[dependencies]
log = "0.4"
